@@ -10,7 +10,7 @@
 # a section called [menu]. Further each driver has a section which
 # defines how the driver acts.
 #
-# The drivers are activated by specifiying them in a driver= line in the
+# The drivers are activated by specifying them in a driver= line in the
 # server section, like:
 #
 #   Driver=curses
@@ -40,7 +40,7 @@ DriverPath=server/drivers/
 # The name of the driver is case sensitive and determines the section
 # where to look for further configuration options of the specific driver
 # as well as the name of the dynamic driver module to load at runtime.
-# The latter one can be changed by giving af File= directive in the
+# The latter one can be changed by giving a File= directive in the
 # driver specific section.
 #
 # The following drivers are supported:
@@ -64,7 +64,7 @@ Port=13666
 # Should we report to syslog instead of stderr ? [default: no; legal: yes, no]
 #ReportToSyslog=yes
 
-# User to run as.  LCDd will drop its root priviledges, if any,
+# User to run as.  LCDd will drop its root privileges, if any,
 # and run as this user instead.
 User=nobody
 
@@ -106,23 +106,16 @@ WaitTime=5
 #TitleSpeed=10
 
 # The "...Key=" lines define what the server does with keypresses that
-# don't go to any client.
-# These are the defaults:
+# don't go to any client. The ToggleRotateKey stops rotation of screens, while
+# the PrevScreenKey and NextScreenKey go back / forward one screen (even if
+# rotation is disabled.
+# Assign the key string returned by the driver to the ...Key setting. These
+# are the defaults:
 ToggleRotateKey=Enter
 PrevScreenKey=Left
 NextScreenKey=Right
 #ScrollUpKey=Up
 #ScrollDownKey=Down
-
-# If you have only 4 keys, you can choose to use this:
-#ToggleRotateKey=Enter
-#PrevScreenKey=Up
-#NextScreenKey=Down
-
-# If you have only 3 keys, you can choose to use this:
-#ToggleRotateKey=Enter
-#PrevScreenKey=Up
-
 
 
 ## The menu section. The menu is an internal LCDproc client. ##
@@ -130,20 +123,15 @@ NextScreenKey=Right
 # You can configure what keys the menu should use. Note that the MenuKey
 # will be reserved exclusively, the others work in shared mode.
 
-# The following works excellent with 4 keys or more.
+# Up to six keys are supported. The MenuKey (to enter and exit the menu), the
+# EnterKey (to select values) and at least one movement keys are required.
+# These are the default key assignments:
 MenuKey=Escape
 EnterKey=Enter
 UpKey=Up
 DownKey=Down
-# If you have 6 keys you may define these as well
 #LeftKey=Left
 #RightKey=Right
-
-# If you have only 3 keys, you could use something like this:
-#MenuKey=Escape
-#EnterKey=Enter
-#DownKey=Down
-
 
 
 ### Driver sections are below this line, in alphabetical order  ###
@@ -175,7 +163,8 @@ Brightness=1000
 # This value is used when the display is normally
 # switched off in case LCDd is inactive
 OffBrightness=0
-# Set the communication speed [default: 9600; legal: 1200, 2400, 9600, 19200 or 115200]
+# Set the communication speed [default: 9600; legal: 1200, 2400, 9600, 19200,
+# 115200]
 Speed=9600
 # Set the firmware version (New means >= 2.0) [default: no; legal: yes, no]
 NewFirmware=no
@@ -250,7 +239,7 @@ Reboot=yes
 #Size=20x4
 
 # Override the default communication speed known for the selected model.
-# [default: depending on model; legal: 19200, 115200]
+# Default value depends on model [legal: 19200, 115200]
 #Speed=115200
 
 
@@ -274,7 +263,7 @@ Size=20x4
 TopLeftX=7
 TopLeftY=7
 
-# use ASC symbols for icons & bars [default: no; legal, yes, no]
+# use ASC symbols for icons & bars [default: no; legal: yes, no]
 UseACS=no
 
 # draw Border [default: yes; legal: yes, no]
@@ -291,7 +280,10 @@ Model=12232
 # Select the output device to use [default: /dev/lcd]
 Device=/dev/ttyUSB0
 
-# Select the LCD size [default: depending on model: 12232: 20x4, 12832: 21x4, 1602: 16x2]
+# Select the LCD size. Default depends on model:
+# 12232: 20x4
+# 12832: 21x4
+# 1602: 16x2
 Size=20x4
 
 # Set the communication speed [default: 19200; legal: 9600, 19200]
@@ -320,7 +312,7 @@ Keypad=yes
 # KeyMap_E=Enter
 # KeyMap_F=Escape
 
-# keypad_test_mode permits to test keypad assignement
+# keypad_test_mode permits one to test keypad assignment
 # Default value is no
 #keypad_test_mode=yes
 
@@ -396,11 +388,12 @@ size=20x5
 Driver=noritake800
 
 # no=use graphlcd bitmap fonts (they have only one size / font file)
-# yes=use fonts supported by FreeType2 (needs Freetype2 support in libglcdprocdriver and its dependants)
+# yes=use fonts supported by FreeType2 (needs Freetype2 support in
+# libglcdprocdriver and its dependants)
 UseFT2=yes
 
 # text resolution in fixed width characters [default: 16x4]
-# (if it won't fit according to available physical pixel resolutioni
+# (if it won't fit according to available physical pixel resolution
 # and the minimum available font face size in pixels, then
 # 'DebugBorder' will automatically be turned on)
 TextResolution=20x4
@@ -413,7 +406,7 @@ FontFile=/usr/share/fonts/corefonts/courbd.ttf
 # character encoding to use
 CharEncoding=iso8859-2
 
-# minumum size in pixels in which fonts should be rendered
+# minimum size in pixels in which fonts should be rendered
 MinFontFaceSize=7x12
 
 ## optional:
@@ -423,7 +416,7 @@ Backlight=no                    # Backlight if applicable
 UpsideDown=no                   # flip image upside down
 Invert=no                       # invert light/dark pixels
 ShowDebugFrame=no               # turns on/off 1 pixel thick debugging
-                                # border whithin the usable text area,
+                                # border within the usable text area,
                                 # for setting up TextResolution and
                                 # MinFontFaceSize (if using FT2);
 ShowBigBorder=no                # border around the unused area
@@ -453,7 +446,7 @@ Speed=19200
 # Select what type of connection. See documentation for types.
 ConnectionType=4bit
 
-# Port where the LPT is [ususal: 0x278, 0x378 and 0x3BC]
+# Port where the LPT is. Usual value are: 0x278, 0x378 and 0x3BC
 Port=0x378
 
 # Device of the serial interface [default: /dev/lcd]
@@ -469,7 +462,7 @@ Keypad=no
 # Set the initial contrast (bwctusb and lcd2usb) [default: 500; legal: 0 - 1000]
 Contrast=0
 
-# Set brightness of the backlight (lcd2usb only) [default: 0; legal 0 - 1000]
+# Set brightness of the backlight (lcd2usb only) [default: 0; legal: 0 - 1000]
 #Brightness=1000
 #OffBrightness=0
 
@@ -480,9 +473,9 @@ Backlight=no
 # be able to control it with the lcdproc OUTPUT command
 OutputPort=no
 
-# Specifies if the last line is pixel addressable or it controls an
-# underline effect. [default: true (= pixel addressable); legal: yes, no]
-#Lastline=true
+# Specifies if the last line is pixel addressable (yes) or it controls an
+# underline effect (no). [default: yes; legal: yes, no]
+#Lastline=yes
 
 # Specifies the size of the LCD.
 # In case of multiple combined displays, this should be the total size.
@@ -492,7 +485,7 @@ Size=20x4
 # Vspan=2,2 means both displays have 2 lines.
 #vspan=2,2
 
-# If you have an HD66712, a KS0073 or an other 'almost HD44780-compatible',
+# If you have an HD66712, a KS0073 or another 'almost HD44780-compatible',
 # set this flag to get into extended mode (4-line linear).
 #ExtendedMode=yes
 
@@ -502,8 +495,9 @@ Size=20x4
 
 # Character map to to map ISO-8859-1 to the LCD's character set
 # [default: hd44780_default; legal: hd44780_default, hd44780_euro, ea_ks0073,
-# sed1278f_0b, (hd44780_koi8_r, hd44780_cp1251, hd44780_8859_5, upd16314 if
-# compiled with additional charmaps)]
+# sed1278f_0b, hd44780_koi8_r, hd44780_cp1251, hd44780_8859_5, upd16314 ]
+# (hd44780_koi8_r, hd44780_cp1251, hd44780_8859_5 and upd16314 are possible if
+# compiled with additional charmaps)
 CharMap=hd44780_default
 
 # If your display is slow and cannot keep up with the flow of data from
@@ -551,17 +545,17 @@ Device=/dev/ttyS1
 # display dimensions
 Size=20x4
 
-# serial number [exactly as listed by usbview]
+# serial number. Must be exactly as listed by usbview
 # (if not given, the 1st IOWarrior found gets used)
 #SerialNumber=00000674
 
-# If you have an HD66712, a KS0073 or an other 'almost HD44780-compatible',
+# If you have an HD66712, a KS0073 or another 'almost HD44780-compatible',
 # set this flag to get into extended mode (4-line linear).
 #ExtendedMode=yes
 
-# Specifies if the last line is pixel addressable or it controls an
-# underline effect. [default: true (= pixel addressable); legal: yes, no]
-#Lastline=true
+# Specifies if the last line is pixel addressable (yes) or it controls an
+# underline effect (no). [default: yes; legal: yes, no]
+#Lastline=yes
 
 
 
@@ -575,18 +569,24 @@ Device=/dev/lcd0
 Size=16x2
 
 # Character map to to map ISO-8859-1 to the displays character set.
-# [default: none; legal: none, hd44780_euro, (upd16314, hd44780_koi8_r,
-# hd44780_cp1251, hd44780_8859_5 if compiled with additional charmaps)]
+# [default: none; legal: none, hd44780_euro, upd16314, hd44780_koi8_r,
+# hd44780_cp1251, hd44780_8859_5 ] (upd16314, hd44780_koi8_r,
+# hd44780_cp1251, hd44780_8859_5 are possible if compiled with additional
+# charmaps)
 CharMap=hd44780_euro
 
 ## Soundgraph iMON LCD ##
 [imonlcd]
-# Specify which iMon protocol should be used [legal: 0=15c2:ffdc device,
-# 1=15c2:0038 device; default: 0]
+# Specify which iMon protocol should be used
+# [legal: 0, 1; default: 0]
+# Choose 0 for 15c2:ffdc device,
+# Choose 1 for 15c2:0038 device
 Protocol=0
 
-# Set the exit behavior [legal: 0=leave shutdown message, 1=show the big clock,
-# 2=blank device; default: 1]
+# Set the exit behavior [legal: 0-2; default: 1]
+# 0 means leave shutdown message,
+# 1 means show the big clock,
+# 2 means blank device
 #OnExit=2
 
 # Select the output device to use [default: /dev/lcd0]
@@ -601,8 +601,9 @@ Contrast=200
 # Set the backlight state [default: on; legal: on, off]
 #Backlight=on
 
-# Set the disc mode [legal: 0=spin the "slim" disc - two disc segments,
-# 1=their complement spinning; default: 0]
+# Set the disc mode [legal: 0,1; default: 0]
+# 0 => spin the "slim" disc - two disc segments,
+# 1 => their complement spinning;
 #DiscMode=0
 
 
@@ -751,9 +752,9 @@ OffBrightness=50
 # Show self-running clock after LCDd shutdown
 # Possible values: [default: no; legal: no, small, big]
 Clock=big
-# Dimm display, no dimming gives full brightness [default: no, legal: yes, no]
+# Dim display, no dimming gives full brightness [default: no, legal: yes, no]
 Dimming=no
-# Dimm display in case LCDd is inactive [default: no, legal: yes, no]
+# Dim display in case LCDd is inactive [default: no, legal: yes, no]
 OffDimming=yes
 
 
@@ -846,7 +847,8 @@ WaitAfterRefresh = 1000
 
 ## Noritake VFD driver ##
 [NoritakeVFD]
-# device where the VFD is. Usual values are /dev/ttyS0 and /dev/ttyS1 [default: /dev/lcd]
+# device where the VFD is. Usual values are /dev/ttyS0 and /dev/ttyS1
+# [default: /dev/lcd]
 Device=/dev/ttyS0
 # Specifies the size of the LCD.
 Size=20x4
@@ -858,7 +860,8 @@ Brightness=1000
 OffBrightness=50
 # set the serial port speed [default: 9600, legal: 1200, 2400, 9600, 19200, 115200]
 Speed=9600
-# Set serial data parity [default: 0 (None), legal: 0(=none), 1(=odd), 2(=even)]
+# Set serial data parity [default: 0; legal: 0-2 ]
+# Meaning: 0(=none), 1(=odd), 2(=even)
 Parity=0
 # re-initialize the VFD [default: no; legal: yes, no]
 Reboot=no
@@ -890,7 +893,7 @@ Brightness=1000
 # Set the initial contrast [default: 1000; legal: 0 - 1000]
 Contrast=1000
 
-# Light the keys? i[default: on; legal: on, off]
+# Light the keys? [default: on; legal: on, off]
 Keylights=on
 
 # If Keylights is on, the you can unlight specific keys below:
@@ -912,7 +915,8 @@ Key5Light=on
 LircPort=8765
 
 # Threshold in jiffies of synthesized gap that triggers flushing the IR data
-# to lirc [default: 100 (6.1ms); legal: 16 - 32767; 0 to disable].
+# to lirc [default: 100 ; max: 32767 ]
+# 100 means 6.1ms. legal: 16 - 32767; Use 0 to disable.
 LircFlushThreshold=100
 
 
@@ -956,14 +960,14 @@ InterfaceType=68
 
 # On fast machines it may be necessary to slow down transfer to the display.
 # If this value is set to zero, delay is disabled. Any value greater than
-# zero slows down each write by one microsecond. [legal: 0-1000; default 1]
+# zero slows down each write by one microsecond. [legal: 0-1000; default: 1]
 DelayMult=0
 
 
 ## serial POS display driver ##
 [serialPOS]
 
-# Device to use in serial modea [default: /dev/lcd]
+# Device to use in serial mode [default: /dev/lcd]
 Device=/dev/lcd
 
 # Specifies the size of the display in characters. [default: 16x2]
@@ -973,7 +977,8 @@ Size=16x2
 # [default: AEDEX; legal: IEE, Epson, Emax, IBM, LogicControls, Ultimate]
 Type=AEDEX
 
-# communication baud rate with the display [default: 9600; legal: 1200, 2400, 19200, 115200]
+# communication baud rate with the display [default: 9600; legal: 1200, 2400,
+# 19200, 115200]
 Speed=9600
 
 
@@ -992,19 +997,22 @@ Speed=9600
 # 6 Futaba NA202SD08FA (allmost IEE compatible)
 # 7 Samsung 20S207DA4 and 20S207DA6
 # 8 Nixdorf BA6x / VT100
-# (* most should work, not testet yet.)
+# (* most should work, not tested yet.)
 Type=0
 
-# "no" if display connected serial, "yes" if connected parallel. [default: no(=serial)]
+# "no" if display connected serial, "yes" if connected parallel. [default: no]
+# I.e. serial by default
 use_parallel=no
 
-# Number of Custom-Characters [default: displaytype dependent]
+# Number of Custom-Characters. default is display type dependent
 #Custom-Characters=0
 
-# Portaddress where the LPT is. Used in parallelmode only. Usual values are 0x278, 0x378 and 0x3BC
+# Portaddress where the LPT is. Used in parallel mode only. Usual values are
+# 0x278, 0x378 and 0x3BC.
 Port=0x378
 
-# Set parallel port timingdelay (us). Used in parallelmode only. [default: 2; legal: 0 - 255]
+# Set parallel port timing delay (us). Used in parallel mode only.
+# [default: 2; legal: 0 - 255]
 #PortWait=2
 
 # Device to use in serial mode. Usual values are /dev/ttyS0 and /dev/ttyS1
@@ -1070,7 +1078,8 @@ Device=/dev/ttyUSB0
 ## SVGAlib driver ##
 [svga]
 
-# svgalib mode to use [default: G320x240x256; legal: supported svgalib modes]
+# svgalib mode to use [default: G320x240x256 ]
+# legal values are supported svgalib modes
 #Mode=G640x480x256
 
 # set display size [default: 20x4]
@@ -1161,7 +1170,8 @@ Size=20x4
 # Select the output device to use [default: /dev/lcd]
 Device=/dev/lcd
 
-# Set the communication speed [default: 19200; legal: 1200, 2400, 9600, 19200, 38400, 57600, 115200]
+# Set the communication speed [default: 19200; legal: 1200, 2400, 9600, 19200,
+# 38400, 57600, 115200]
 Speed=19200
 
 
